[package]
name = "ast_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0.82"
indoc = "1.0.3"

[dependencies.pyo3]
version = "0.15.1"
features = ["auto-initialize"]